--- a/index.html
+++ b/index.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&family=Roboto:wght@300;400;700&family=Sora:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/e2597287a1.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+  <header class="header">
+    <div class="row m-0 h-100">
+      <nav class="d-flex top-nav col-md-3">
+        <a class="logo">
+          <span class="logo-text">RM</span>
+        </a>
+        <div class="nav-links">
+          <a href="#my-portfolio">Portfolio</a>
+          <a href="#about-me">About</a>
+          <a href="#contact-me">Contact</a>
+        </div>
+      </nav>
+
+      <div class="main-info col-md-9 p-0">
+        <div class="purple-gradient"></div>
+        <div class="dev-info">
+          <p class="dev-name">Rashid Mammadli</p>
+          <p class="dev-role">Full-Stack Software Developer</p>
+          <span class="dev-about">
+            Hello I am a software developer! I can help you build a product, featre or website. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.
+          </span>
+          <div class="social-links-box">
+          <span class="socials-text">My social network profiles</span>
+          <span class="social-links">
+            <a href="https://www.linkedin.com/in/rashidmammadli/" class="icon-link">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://twitter.com/Rasheed49705929" class="icon-link">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.github.com/8bts" class="icon-link">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.github.com/8bts" class="icon-link">
+              <i class="fab fa-medium"></i>
+            </a>
+          </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="my-portfolio"></div>
+    <div class="about-me"></div>
+    <div class="contact-me"></div>
+  </main>
+
+  <footer></footer>
+
 </body>
 </html>
