Add live links to projects

--- a/index.html
+++ b/index.html
@@ -28,21 +28,22 @@
           <p class="dev-name">Rashid Mammadli</p>
           <p class="dev-role">Full-Stack Software Developer</p>
           <span class="dev-about">
-            Hello I am a software developer! I can help you build a product, featre or website. Look through some of my work and experience! If you like what you see and have project you need coded, don’t hesistate to contact me.
+            Hello! I am a software developer!
+             I can help you build a product, feature, or website. Look through some of my work below! If you like what you see and have a project you need coded, don’t hesitate to contact me.
           </span>
           <div class="social-links-box">
           <span class="socials-text">My social network profiles</span>
           <span class="social-links">
-            <a href="https://www.linkedin.com/in/rashidmammadli/" class="icon-link">
+            <a target="_blank" href="https://www.linkedin.com/in/rashidmammadli/" class="icon-link">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a href="https://twitter.com/Rasheed49705929" class="icon-link">
+            <a target="_blank" href="https://twitter.com/Rasheed49705929" class="icon-link">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.github.com/8bts" class="icon-link">
+            <a target="_blank" href="https://www.github.com/8bts" class="icon-link">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.github.com/8bts" class="icon-link">
+            <a target="_blank" href="https://medium.com/@mcmizze" class="icon-link">
               <i class="fab fa-medium"></i>
             </a>
           </span>
@@ -71,8 +72,11 @@
                   <span class="p-badge badge badge-pill badge-dark2 mx-1">Ruby on Rails</span>
                   <span class="p-badge badge badge-pill badge-dark2">Bootstrap</span>
                 </div>
-                <a class="btn btn-block btn-primary p-btn" href="https://github.com/8Bts/Big_Strawberry">
-                  See the project
+                <a target="_blank" class="btn btn-block btn-primary p-btn" href="https://github.com/8Bts/Big_Strawberry">
+                  See Source
+                </a>
+                <a target="_blank" class="btn btn-block btn-primary p-btn p-live" href="https://warm-cliffs-17365.herokuapp.com/">
+                  See Live
                 </a>
               </div>
 
@@ -85,23 +89,29 @@
                   <span class="p-badge badge badge-pill badge-dark2 mx-1">HTML/CSS</span>
                   <span class="p-badge badge badge-pill badge-dark2">Bootstrap</span>
                 </div>
-                <a class="btn btn-block btn-primary p-btn" href="https://github.com/8Bts/the_big_4_festival">
-                  See the project
+                <a target="_blank" class="btn btn-block btn-primary p-btn" href="https://github.com/8Bts/the_big_4_festival">
+                  See Source
+                </a>
+                <a target="_blank" class="btn btn-block btn-primary p-btn p-live" href="https://rawcdn.githack.com/8Bts/the_big_4_festival/1497300ed6e9fd3d3430ddb0e907a71ed1fd1f3d/index.html">
+                  See Live
                 </a>
               </div>
 
               <div class="project-card project-3 mr-md-3">
                 <div class="p-image tt">
-                  <span class="p-name">Newsweek Clone</span>
+                  <span class="p-name">Phaser Game - Bear The Fisher</span>
                   <span class="p-link"></span>
                 </div>
                 <div class="badge-cont">
-                  <span class="p-badge badge badge-pill badge-dark2">HTML/CSS</span>
-                  <span class="p-badge badge badge-pill badge-dark2 mx-1">Bootstrap</span>
+                  <span class="p-badge badge badge-pill badge-dark2">Phaser 3</span>
+                  <span class="p-badge badge badge-pill badge-dark2 mx-1">HTML5</span>
                   <span class="p-badge badge badge-pill badge-dark2">Javascript</span>
                 </div>
-                <a class="btn btn-block btn-primary p-btn" href="https://github.com/8Bts/newsweek-clone">
-                  See the project
+                <a target="_blank" class="btn btn-block btn-primary p-btn" href="https://github.com/8Bts/Bear_The_Fisher">
+                  See Source
+                </a>
+                <a target="_blank" class="btn btn-block btn-primary p-btn p-live" href="https://bearthefisher.herokuapp.com/">
+                  See Live
                 </a>
               </div>
 
@@ -113,8 +123,11 @@
                 <div class="badge-cont">
                   <span class="p-badge badge badge-pill badge-dark2">HTML/CSS</span>
                 </div>
-                <a class="btn btn-block btn-primary p-btn" href="https://github.com/temesghentekeste/thenextweb-clone">
-                  See the project
+                <a target="_blank" class="btn btn-block btn-primary p-btn" href="https://github.com/temesghentekeste/thenextweb-clone">
+                  See Source
+                </a>
+                <a target="_blank" class="btn btn-block btn-primary p-btn p-live" href="https://rawcdn.githack.com/temesghentekeste/thenextweb-clone/8cecd88724a8215d6c601dab5a633be11625997c/index.html">
+                  See Live
                 </a>
               </div>
               
